--- a/library-web/src/app/presentation/pages/books/book-item/book-item.component.html
+++ b/library-web/src/app/presentation/pages/books/book-item/book-item.component.html
@@ -1,14 +1,22 @@
-<div class="bg-white rounded-lg shadow-md p-4">
-    <h2 class="text-xl font-bold mb-2">{{ book?.title }}</h2>
-    <p class="text-gray-600 mb-2">Published Date: {{ book?.publishedDate | date:'dd/MM/yyyy' }}</p>
-    <p class="text-gray-600 mb-2">Available: {{ book?.isAvailable ? 'Yes' : 'No' }}</p>
-    <p class="text-gray-600 mb-2">Author: {{ book?.author?.firstName }} {{ book?.author?.lastName }}</p>
-    <div class="flex justify-around items-center">
-        @if(book?.isAvailable){
-        <button (click)="reserveBook(book?.id ?? '')"
-            class="bg-sky-900 rounded-xl p-3 text-white font-bold">Reserve</button>
-        }
-        <ng-icon (click)="deleteBook(book?.id ?? '')" name="heroTrashSolid"
-            class="cursor-pointer text-3xl text-red-600"></ng-icon>
+<div class="bg-gray-800 text-white rounded-e-2xl h-[290px] w-[180px] relative">
+
+    <div class="absolute h-full w-full flex">
+        <div class="w-[30px] h-full bg-black left-0 relative">
+            <div class="w-[1px] bg-white h-full absolute mx-2"></div>
+        </div>
+        <div class="flex flex-col h-full w-full justify-center items-center">
+            <h2 class="text-xl font-bold mb-2">{{ book?.title }}</h2>
+            <p class="mb-2 text-sm">{{ book?.publishedDate | date:'dd/MM/yyyy' }}</p>
+            <p class="mb-2">{{ book?.author?.firstName }} {{ book?.author?.lastName }}</p>
+            <div class="flex justify-around items-center">
+                @if(book?.isAvailable){
+                <button (click)="reserveBook(book?.id ?? '')"
+                    class="bg-sky-900 rounded-xl p-3 text-white font-bold">Reserve</button>
+                }
+                <ng-icon (click)="deleteBook(book?.id ?? '')" name="heroTrashSolid"
+                    class="text-3xl text-red-600"></ng-icon>
+            </div>
+        </div>
     </div>
+
 </div>
